--- a/lombardidev-astro/package.json
+++ b/lombardidev-astro/package.json
@@ -9,8 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.7",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "5.0.0-beta.12",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3"
   }
 }
