--- a/lombardidev-astro/package.json
+++ b/lombardidev-astro/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.7",
+    "@fontsource-variable/onest": "^5.2.7",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "5.0.0-beta.12",
     "react": "^19.1.0",
